<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi" />

    <EditText
        android:id="@+id/ed_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv5"
        android:ems="4"
        android:hint="@string/hiht"
        android:inputType="numberDecimal"
        android:text=""

        />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ed_hi"
        android:text="@string/we" />

    <EditText
        android:id="@+id/ed_we"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv6"
        android:layout_marginTop="-3dp"
        android:layout_toRightOf="@+id/tv6"
        android:ems="4"
        android:hint="@string/weht"
        android:inputType="numberDecimal"
        android:text="" />

    <Button
        android:id="@+id/b_com_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ed_we"

        android:text="@string/com" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_hi"
        android:text="@string/res" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_below="@+id/tv7"
        android:layout_height="250sp"
        >

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView1"
        android:stretchColumns="2,3">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <EditText
                android:id="@+id/editText_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="2"

                android:inputType="text"
                android:text="" />

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Button1" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Button2" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Button3" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editText_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"


                android:inputType="text"
                android:text="" />

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Button4" />


            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="Button5" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TableRow>


    </TableLayout>

    <LinearLayout
        android:id="@+id/Lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/table">


        </LinearLayout>


</RelativeLayout>